Added links + improved OpenAPI spec
